--- a/modules/app/src/main/res/layouts/adapters/layout/category_add_entity.xml
+++ b/modules/app/src/main/res/layouts/adapters/layout/category_add_entity.xml
@@ -6,12 +6,21 @@
         <variable
             name="categoryModel"
             type="com.lonn.studentassistant.viewModels.CategoryViewModel" />
+
+        <variable
+            name="isTable"
+            type="Boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="@{isTable ? @dimen/dim_8dp : @dimen/dim_0dp}"
+        android:layout_marginTop="@{@dimen/dim_8dp}"
+        android:layout_marginEnd="@{isTable ? @dimen/dim_8dp : @dimen/dim_0dp}"
+        android:layout_marginBottom="@{isTable ? @dimen/dim_8dp : @dimen/dim_0dp}"
         android:background="@drawable/dotted_transparent_background"
         android:padding="5dp">
 
