--- a/modules/app/src/main/res/layouts/activities/laboratoryEntityActivity/layout/laboratory_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/laboratoryEntityActivity/layout/laboratory_entity_activity_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.implementations.entityActivities.course.CourseEntityActivity">
 
@@ -10,6 +11,10 @@
         <import type="com.lonn.studentassistant.viewModels.CategoryViewModel" />
 
         <import type="com.lonn.studentassistant.databinding.CategoryGenerator" />
+
+        <variable
+            name="editing"
+            type="Boolean" />
 
         <variable
             name="laboratory"
@@ -25,57 +30,128 @@
 
     </data>
 
-    <ScrollView
-        style="@style/ScreenLayoutWrapped"
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
+            style="@style/ScreenLayoutWrapped"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+
+                    <EditText
+                        style="@style/EntityActivityTitleHiddenEditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:enabled="@{editing}"
+                        android:text="@{laboratory.title}" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/EntityActivitySubtitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Week " />
+
+                    <EditText
+                        style="@style/EntityActivitySubtitleHiddenEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:enabled="@{editing}"
+                        android:text="@{laboratory.weekNumber + ` `}" />
+
+                </LinearLayout>
+
+                <TextView
+                    style="@style/EntityActivityContentTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description" />
+
+                <EditText
+                    style="@style/EntityActivityContentHiddenEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@{editing? @drawable/edit_text_background : null}"
+                    android:enabled="@{editing}"
+                    android:text="@{laboratory.description, default = `(no description)`}" />
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/gradesCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:categoryTitle="@{`Grades`}"
+                    android:childEntities="@{grades.values().size() > 0? grades.values() : null}"
+                    android:entityName="@{`grades`}"
+                    android:isTable="@{true}"
+                    android:permissionLevel="@{1}">
+
+                    <include
+                        layout="@layout/grade_laboratory_table_header"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp" />
+
+                </com.lonn.studentassistant.views.implementations.category.ScrollViewCategory>
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/filesCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:categoryTitle="@{`Files`}"
+                    android:childEntities="@{files.values().size() > 0? files.values() : null}"
+                    android:entityName="@{`file`}"
+                    android:permissionLevel="@{1}" />
+            </LinearLayout>
+        </ScrollView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:orientation="vertical"
+            app:layout_dodgeInsetEdges="bottom">
 
-            <TextView
-                style="@style/EntityActivityTitle"
-                android:layout_width="match_parent"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_edit"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{laboratory.title}" />
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="@dimen/fab_margin"
+                app:fabCustomSize="46dp"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
 
-            <TextView
-                style="@style/EntityActivitySubtitle"
-                android:layout_width="match_parent"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_delete"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{`Week ` + laboratory.weekNumber}" />
-
-            <TextView
-                style="@style/EntityActivityContentTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Description" />
-
-            <TextView
-                style="@style/EntityActivityContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{laboratory.description, default = `(no description)`}" />
-
-            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                android:id="@+id/gradesCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:categoryTitle="@{`Grades`}"
-                android:childEntities="@{grades.values().size() > 0? grades.values() : null}"
-                android:entityName="@{`grades`}"
-                android:permissionLevel="@{1}" />
-
-            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                android:id="@+id/filesCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:categoryTitle="@{`Files`}"
-                android:childEntities="@{files.values().size() > 0? files.values() : null}"
-                android:entityName="@{`file`}"
-                android:permissionLevel="@{1}" />
+                android:layout_gravity="top|end"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="8dp"
+                app:fabCustomSize="46dp"
+                app:layout_anchor="@id/fab"
+                app:layout_anchorGravity="top"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
         </LinearLayout>
-    </ScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
