--- a/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
@@ -31,94 +31,135 @@
         <variable
             name="recurringClasses"
             type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.RecurringClassViewModel&gt;" />
+
+        <variable
+            name="editing"
+            type="Boolean" />
     </data>
 
-    <ScrollView
-        style="@style/ScreenLayoutWrapped"
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
+            style="@style/ScreenLayoutWrapped"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/EntityActivityTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{otherActivity.name}" />
+
+                <TextView
+                    style="@style/EntityActivitySubtitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{otherActivity.type + `\n` + otherActivity.semesterString}" />
+
+                <TextView
+                    style="@style/EntityActivityContentTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description" />
+
+                <TextView
+                    style="@style/EntityActivityContentText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{otherActivity.description}" />
+
+                <TextView
+                    style="@style/EntityActivityContentTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Website" />
+
+                <TextView
+                    style="@style/EntityActivityContentText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{otherActivity.website}"
+                    android:visibility="@{otherActivity.websiteVisible}" />
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:categoryTitle="@{`Files`}"
+                    android:childEntities="@{files.values()}"
+                    android:entityName="@{`file`}" />
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:categoryTitle="@{`Professors`}"
+                    android:childEntities="@{professors.values()}"
+                    android:entityName="@{`professor`}" />
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:categoryTitle="@{`Regular schedule`}"
+                    android:childEntities="@{recurringClasses.values()}"
+                    android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
+                    android:entityName="@{`regular class`}"
+                    android:showEmpty="@{false}"
+                    android:showHeader="@{true}"
+                    android:subcategoryGeneratorFunction="@{(category) -> CategoryGenerator.scheduleCategories((CategoryViewModel) category)}"
+                    app:isTable="@{true}" />
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:categoryTitle="@{`Special schedule`}"
+                    android:childEntities="@{oneTimeClasses.values()}"
+                    android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
+                    android:showEmpty="@{false}"
+                    android:showHeader="@{true}"
+                    android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.oneTimeScheduleCategories((CategoryViewModel) category, oneTimeClasses.values())}"
+                    app:isTable="@{true}" />
+
+            </LinearLayout>
+        </ScrollView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
             android:orientation="vertical"
-            android:gravity="center">
+            app:layout_dodgeInsetEdges="bottom">
 
-            <TextView
-                style="@style/EntityActivityTitle"
-                android:layout_width="match_parent"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_edit"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{otherActivity.name}" />
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="@dimen/fab_margin"
+                app:fabCustomSize="46dp"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
 
-            <TextView
-                style="@style/EntityActivitySubtitle"
-                android:layout_width="match_parent"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_delete"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{otherActivity.type + `\n` + otherActivity.yearSemester}" />
-
-            <TextView
-                style="@style/EntityActivityContentTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Description" />
-
-            <TextView
-                style="@style/EntityActivityContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{otherActivity.description}" />
-
-            <TextView
-                style="@style/EntityActivityContentTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Website" />
-
-            <TextView
-                style="@style/EntityActivityContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{otherActivity.website}"
-                android:visibility="@{otherActivity.websiteVisible}" />
-
-            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:categoryTitle="@{`Files`}"
-                android:childEntities="@{files.values()}"
-                android:entityName="@{`file`}" />
-
-            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:categoryTitle="@{`Professors`}"
-                android:childEntities="@{professors.values()}"
-                android:entityName="@{`professor`}" />
-
-            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:categoryTitle="@{`Regular schedule`}"
-                android:childEntities="@{recurringClasses.values()}"
-                android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
-                android:entityName="@{`regular class`}"
-                android:showEmpty="@{false}"
-                android:showHeader="@{true}"
-                android:subcategoryGeneratorFunction="@{(category) -> CategoryGenerator.scheduleCategories((CategoryViewModel) category)}"
-                app:isTable="@{true}" />
-
-            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:categoryTitle="@{`Special schedule`}"
-                android:childEntities="@{oneTimeClasses.values()}"
-                android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
-                android:showEmpty="@{false}"
-                android:showHeader="@{true}"
-                android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.oneTimeScheduleCategories((CategoryViewModel) category, oneTimeClasses.values())}"
-                app:isTable="@{true}" />
-
+                android:layout_gravity="top|end"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="8dp"
+                app:fabCustomSize="46dp"
+                app:layout_anchor="@id/fab"
+                app:layout_anchorGravity="top"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
         </LinearLayout>
-    </ScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
