--- a/modules/app/src/main/res/values/dimens.xml
+++ b/modules/app/src/main/res/values/dimens.xml
@@ -11,5 +11,6 @@
     <dimen name="dim_16dp">16dp</dimen>
     <dimen name="dim_10dp">10dp</dimen>
     <dimen name="dim_8dp">8dp</dimen>
+    <dimen name="dim_4dp">4dp</dimen>
     <dimen name="dim_0dp">0dp</dimen>
 </resources>
